# manim-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
crates/manim/: Cargo.toml
crates/manim-book/: Cargo.toml
crates/manim-book/src/: components.rs  lib.rs  numbering.rs  style.rs
crates/manim-chem/: Cargo.toml
crates/manim-chem/examples/: caffeine.rs  nacl_lattice.rs  orbital_isosurface.rs
crates/manim-chem/src/: cube.rs  element.rs  lattice.rs  lib.rs  molecule.rs  parsers.rs  render.rs
crates/manim-color/: Cargo.toml
crates/manim-color/src/: catalog.rs  gradient.rs  lib.rs
crates/manim-color/tests/: properties.proptest-regressions  properties.rs
crates/manim-core/: Cargo.toml
crates/manim-core/src/: animated_boundary.rs  animation.rs  boolean.rs  camera.rs  config.rs  display.rs  error.rs  image_mobject.rs  lib.rs  mobject.rs  network.rs  scene.rs  scene_state.rs  style.rs  svg.rs  timeline.rs  vector_field.rs  vector_space.rs
crates/manim-core/src/animations/: animate.rs  apply.rs  camera_move.rs  composition.rs  creation.rs  fading.rs  growing.rs  indication.rs  mod.rs  movement_rotation.rs  paths.rs  transform.rs  transform_matching.rs  updaters.rs  value_tracker.rs
crates/manim-core/src/geometry/: arc.rs  brace.rs  group.rs  line.rs  mod.rs  polygram.rs  vectorized.rs
crates/manim-core/src/graphing/: axes.rs  bar_chart.rs  coord.rs  functions.rs  mod.rs  number_line.rs  plane.rs
crates/manim-core/src/mesh/: anim.rs  frame.rs  height_field.rs  instanced.rs  mesh_mobject.rs  mod.rs  surface3d.rs  trimesh.rs
crates/manim-core/src/threed/: axes3d.rs  mod.rs  solids.rs  surface.rs
crates/manim-core/tests/: animation.rs  parity.rs  phase10.rs  phase4.rs  scene_graph.rs
crates/manim-dioxus/: Cargo.toml
crates/manim-dioxus/src/: constraint.rs  exercise.rs  gesture.rs  interaction.rs  lib.rs  panzoom.rs  player.rs  readout.rs  schedule.rs  url.rs  url_state.rs
crates/manim-dynamics/: Cargo.toml
crates/manim-dynamics/examples/: van_der_pol.rs
crates/manim-dynamics/src/: bifurcation.rs  cycles.rs  equilibria.rs  lib.rs  nullclines.rs  phase.rs  separatrix.rs
crates/manim-fields/: Cargo.toml
crates/manim-fields/src/: ad.rs  complex.rs  field.rs  integrate.rs  lib.rs  map.rs  pde.rs
crates/manim-math/: Cargo.toml
crates/manim-math/src/: bezier.rs  constants.rs  lib.rs  path.rs  rate_functions.rs  space_ops.rs
crates/manim-math/tests/: properties.rs
crates/manim-nn/: Cargo.toml
crates/manim-nn/examples/: loss_landscape_descent.rs  transformer_block.rs
crates/manim-nn/src/: blockdiagram.rs  flow.rs  graph.rs  heatmap.rs  landscape.rs  lib.rs
crates/manim-quantum/: Cargo.toml
crates/manim-quantum/examples/: bloch_gates.rs  hydrogen_orbitals.rs  wavepacket_barrier.rs
crates/manim-quantum/src/: bloch.rs  eigenstates.rs  lib.rs  superposition.rs  wavefunction.rs  wells.rs
crates/manim-render/: Cargo.toml
crates/manim-render/src/: camera.rs  canvas.rs  export.rs  golden.rs  layout.rs  lib.rs  material.rs  mesh_pipeline.rs  ops.rs  preview.rs  recording.rs  renderer.rs  tessellate.rs
crates/manim-render/tests/: export.rs  golden.rs  mesh_golden.rs
crates/manim-sci/: Cargo.toml
crates/manim-sci/examples/: conformal_square.rs  dipole_field.rs  domain_coloring_gallery.rs  geodesic_race.rs  heatmap_contours.rs  kepler_orbits.rs  mobius_flow.rs  stream_ribbons.rs  symplectic_vs_rk4.rs  tensor_glyph_field.rs  torus_curvature.rs  trefoil_tube.rs
crates/manim-sci/src/: complex_viz.rs  curveviz.rs  deform.rs  diffgeo.rs  geodesics.rs  isosurface.rs  lib.rs  material_quad.rs  vector_field_3d.rs  volumetrics.rs
crates/manim-signal/: Cargo.toml
crates/manim-signal/examples/: epicycles.rs
crates/manim-signal/src/: convolution.rs  filters.rs  fourier.rs  lib.rs  sampling.rs  spectrogram.rs
crates/manim-text/: Cargo.toml
crates/manim-text/src/: brace_label.rs  code.rs  decimal.rs  digits.rs  extras.rs  font.rs  graph_labels.rs  grid.rs  labeled_dot.rs  latex.rs  lib.rs  markup.rs  match_tex.rs  math.rs  matrix.rs  outline.rs  paragraph.rs  table.rs  text.rs  vector_labels.rs  write.rs
crates/manim-text/tests/: math.rs  numbers.rs  phase12_dx.rs  phase8.rs  phase9.rs  text.rs
crates/manim/examples/: arg_min.rs  bar_chart_race.rs  boolean_operations.rs  brace_annotation.rs  code_highlight.rs  gradient_text.rs  graph_layouts.rs  hello_math.rs  implicit_and_field.rs  math_isolation.rs  matrix_table.rs  mesh_heightfield_wave.rs  mesh_molecule.rs  mesh_morph.rs  mesh_surface_rotate.rs  moving_angle.rs  moving_around.rs  point_moving_on_shapes.rs  preview.rs  sin_cos_plot.rs  square_to_circle.rs  three_d_cube.rs  three_d_surface.rs  transform_matching_tex.rs  vector_arrow.rs
crates/manim/src/: lib.rs
crates/manim/tests/: gallery_smoke.rs
docs/: migration-guide.md  parity-audit.md
docs/design/: 00-vision.md  01-architecture.md  02-math-color.md  03-mobject-model.md  04-animation-system.md  05-rendering.md  06-scene-runtime.md  07-text.md  08-dioxus.md  09-testing.md  10-parity-map.md  11-dioxus-desktop.md  12-mesh-pipeline.md  12-scientific-extensions.md
examples/book-template/: Cargo.toml  README.md  index.html
examples/book-template/src/: main.rs
examples/dioxus-app/: Cargo.toml  README.md  index.html
examples/dioxus-app/src/: main.rs
examples/web-vanilla/: Cargo.toml  README.md  index.html
examples/web-vanilla/src/: lib.rs
site/: .gitignore  README.md  book.toml
site/scripts/: api-index.sh  check-assets.sh  demos-unavailable.html  placeholder-assets.sh
site/src/: SUMMARY.md  chemistry.md  deformations.md  fields.md  getting-started.md  interactive.md  intro.md  materials.md  neural-nets.md  quantum.md  reference.md  surfaces.md  volumetrics.md
site/theme/: manim.css
tools/render-examples/: Cargo.toml
tools/render-examples/src/: main.rs  render.rs
