[workspace]
resolver = "2"
members = [
    "crates/manim-math",
    "crates/manim-color",
    "crates/manim-core",
    "crates/manim-render",
    "crates/manim-text",
    "crates/manim",
    "crates/manim-dioxus",
    "crates/manim-fields",
    "crates/manim-sci",
    "crates/manim-quantum",
    "crates/manim-chem",
    "crates/manim-nn",
    "tools/render-examples",
]
# Standalone wasm demos: separate crates with path deps, kept out of the main
# workspace so native builds stay lean and window/ffmpeg-free.
exclude = ["examples/web-vanilla", "examples/dioxus-app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cryptex-ai/manim_rust"
readme = "README.md"
homepage = "https://github.com/cryptex-ai/manim_rust"
rust-version = "1.85"

[workspace.dependencies]
manim-math = { path = "crates/manim-math" }
manim-color = { path = "crates/manim-color" }
manim-core = { path = "crates/manim-core" }
manim-render = { path = "crates/manim-render" }
manim-text = { path = "crates/manim-text" }
manim-dioxus = { path = "crates/manim-dioxus" }
manim-fields = { path = "crates/manim-fields" }
manim-sci = { path = "crates/manim-sci" }
manim-quantum = { path = "crates/manim-quantum" }
manim-chem = { path = "crates/manim-chem" }
manim-nn = { path = "crates/manim-nn" }

dioxus = "0.6"
glam = "0.30"
usvg = "0.47"
# Pure-Rust Bézier path arithmetic (Apache-2.0) — curve-preserving boolean ops
# for `manim-core::boolean`. wasm-compatible (no C deps).
flo_curves = "0.8"
# Pure-Rust FFT (MIT/Apache-2.0, wasm-clean) — split-step Schrödinger in
# `manim-fields::pde`.
rustfft = "6"
slotmap = "1.0"
thiserror = "2.0"
smallvec = "1.13"
lyon = "1.0"
wgpu = "25"
pollster = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
winit = "0.30"

# wasm32 (feature "web"): canvas surface + browser glue. Only referenced from
# manim-render's wasm target table.
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
] }
console_error_panic_hook = "0.1"

approx = "0.5"
proptest = "1.5"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"

# Keep dev builds lean: full DWARF debug info multiplies target/ size 5-10x
# across our statically-linked test/example binaries (typst+wgpu+dioxus in
# every one). Line tables keep backtraces usable; deps get no debug info.
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 2
debug = false
