[package]
name = "manim-core"
description = "Renderer-agnostic core of manim_rust: scene graph, mobjects, animations, and timeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["manim", "animation", "mobject", "scene-graph"]
categories = ["graphics", "rendering", "mathematics"]

[dependencies]
manim-math = { workspace = true }
manim-color = { workspace = true }
glam = { workspace = true }
slotmap = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
usvg = { workspace = true }
image = { workspace = true }

[dev-dependencies]
approx = { workspace = true }

[lints]
workspace = true
