[package]
name = "manim-dioxus"
description = "Dioxus <ManimPlayer> component: manim_rust scenes as first-class web components"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["manim", "dioxus", "wasm", "animation", "web"]
categories = ["wasm", "gui", "graphics"]
# Not published (yet): this is a thin integration/demo crate that pulls in the
# whole render stack plus heavy wasm-only deps (dioxus web, wgpu, web-sys), and
# its value is the browser gallery rather than a standalone library API.
# Revisit once the core crates are on crates.io and the component API settles.
publish = false

[dependencies]
dioxus = { workspace = true }
manim-core = { workspace = true }

# wasm: the web renderer, the canvas surface, and the browser glue.
[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true, features = ["web"] }
manim-render = { workspace = true, features = ["web"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = "0.3"
# Feature additions union with the workspace `web-sys`; `IntersectionObserver`
# powers the `Figure` lazy-mount (render only once scrolled into view).
web-sys = { workspace = true, features = [
    "IntersectionObserver",
    "IntersectionObserverEntry",
] }

# NOTE: this crate intentionally does NOT inherit `[lints] workspace` — dioxus's
# `#[component]` / `Props` derive macros generate public items that fight
# `missing_docs = "deny"`. Every hand-written public item is still documented.
