[package]
name = "manim-math"
description = "Math foundations for manim_rust: points, bezier curves, paths, space operations, and rate functions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["manim", "math", "bezier", "geometry", "animation"]
categories = ["mathematics", "graphics"]

[dependencies]
glam = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
