[package]
name = "manim-sci"
description = "Scientific visualizers for manim_rust: the bridge from manim-fields (fields, maps) to manim-core mobjects — deformation animations, adaptive grids, and a complex-analysis kit."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["manim", "visualization", "complex-analysis", "fields", "deformation"]
categories = ["graphics", "mathematics", "science"]

[dependencies]
manim-fields = { workspace = true }
manim-core = { workspace = true }
manim-math = { workspace = true }
glam = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
# For the renderable examples only (keeps the library wasm-clean).
manim-render = { workspace = true }

[lints]
workspace = true
