[package]
name = "manim"
description = "A Rust + WebGPU reimplementation of Manim Community Edition: declarative, real-time mathematical animation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
manim-math = { workspace = true }
manim-color = { workspace = true }
manim-core = { workspace = true }
manim-render = { workspace = true }

[features]
## Realtime winit preview window (re-exports `manim-render`'s `preview`). Off by
## default so headless/CI/wasm builds stay window-system-free.
preview = ["manim-render/preview"]
## Browser canvas rendering on wasm32 (re-exports `manim-render`'s `web`).
web = ["manim-render/web"]

[dev-dependencies]
approx = { workspace = true }

[[example]]
name = "preview"
required-features = ["preview"]

[lints]
workspace = true
