[package]
name = "manim"
description = "A Rust + WebGPU reimplementation of Manim Community Edition: declarative, real-time mathematical animation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["manim", "animation", "wgpu", "visualization", "math"]
categories = ["graphics", "rendering", "mathematics", "visualization"]

[dependencies]
manim-math = { workspace = true }
manim-color = { workspace = true }
manim-core = { workspace = true }
manim-render = { workspace = true }
manim-text = { workspace = true }

[features]
## Realtime winit preview window (re-exports `manim-render`'s `preview`). Off by
## default so headless/CI/wasm builds stay window-system-free.
preview = ["manim-render/preview"]
## Browser canvas rendering on wasm32 (re-exports `manim-render`'s `web`).
web = ["manim-render/web"]
## Syntax-highlighted `Code` mobject (re-exports `manim-text`'s `code`; pulls in
## `syntect`). Off by default to keep base builds lean.
code = ["manim-text/code"]

[dev-dependencies]
approx = { workspace = true }

[[example]]
name = "preview"
required-features = ["preview"]

[[example]]
name = "code_highlight"
required-features = ["code"]

[lints]
workspace = true
