[package]
name = "manim-dioxus-gallery"
description = "Standalone Dioxus web gallery for manim_rust's <ManimPlayer>"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# Standalone — excluded from the root workspace (see the workspace `exclude`), so
# the heavy dioxus tree doesn't burden native workspace builds. Path deps reach
# the real crates.

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
manim-dioxus = { path = "../../crates/manim-dioxus" }
manim-core = { path = "../../crates/manim-core" }
# The mesh scene: geometry is glam-typed, and the palette beyond the prelude's
# basic colors lives in manim-color. Versions must match the workspace's.
manim-color = { path = "../../crates/manim-color" }
# The Visual Complex Analysis route: domain-coloring quads (manim-sci) built from
# rational complex fields (manim-fields). Default features only — no manim-render
# (that's behind manim-sci's `render-examples` gate), so this stays wasm-clean.
manim-sci = { path = "../../crates/manim-sci" }
manim-fields = { path = "../../crates/manim-fields" }
glam = "0.30"
